force-app/main/default/objects/Approval_Configuration__c/Approval_Configuration__c.object-meta.xml
<CustomObject>
    <description>Object use to store the details required for approval process like Approvers, Active flag etc.</description>
    <label>Approval Configuration</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Approver Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>