force-app/main/default/objects/Approval_Configuration__c/fields/BU_Head__c.field-meta.xml
<CustomField>
    <fullName>BU_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Configurations8</relationshipName>
    <type>Lookup</type>
</CustomField>