force-app/main/default/objects/Approval_Configuration__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Proposal</fullName>
            </value>
            <value>
                <fullName>No Demand/Bad Information</fullName>
            </value>
            <value>
                <fullName>Value Proposal - Patients</fullName>
            </value>
            <value>
                <fullName>Value Proposal for Accesibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>