force-app/main/default/objects/Approval_Configuration__c/fields/CSE_Country_Lead__c.field-meta.xml
<CustomField>
    <fullName>CSE_Country_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSE Country Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>