force-app/main/default/objects/Approval_Configuration__c/fields/Head_PH_Med__c.field-meta.xml
<CustomField>
    <fullName>Head_PH_Med__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head PH-Med</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Configurations3</relationshipName>
    <type>Lookup</type>
</CustomField>